<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingFragment"
    android:background="@color/white" >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/on_boarding_img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/on_boarding"
        app:layout_constraintBottom_toTopOf="@+id/on_boarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--  Title  -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/on_boarding_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_title"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/on_boarding_content"
        app:layout_constraintEnd_toEndOf="@+id/on_boarding_img"
        app:layout_constraintStart_toStartOf="@+id/on_boarding_img"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_img" />


    <!--  Descriptions -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/on_boarding_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_content"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/gray_6C6C6C"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/on_boarding_button"
        app:layout_constraintEnd_toEndOf="@+id/on_boarding_img"
        app:layout_constraintStart_toStartOf="@+id/on_boarding_img"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_title" />

    <!--  Button  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/on_boarding_button"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/on_boarding_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/on_boarding_img"
        app:layout_constraintStart_toStartOf="@+id/on_boarding_img"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_content" />

</androidx.constraintlayout.widget.ConstraintLayout>